# rsairtable

./: .env  Cargo.toml  README.md  all_matters.json  all_matters_1000.json  complete_mapping.json  debug_auth.rs  filtered_matters.json  foo.json  mapping.json  mapping_no_nulls_jq.json  matter_mapping.csv  pratt_matter.json  schema.json  schema.txt
.cursor/: scratchpad.md  scratchpad.original_development.md  scratchpad4.md  specification.md
examples/: add_record.rs  create_sample_record.rs  debug_auth.rs
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  views.rs
src/views/: clio.rs
tests/: integration_test_step4.rs  test_pagination.rs  test_step11_advanced_cli.rs  test_step5_record_retrieval.rs  test_step6_record_creation.rs  test_step7_record_updates_deletes.rs  test_step8_advanced_features.rs
