[package]
name = "rsairtable"
version = "0.1.0"
edition = "2021"
description = "Rust client library for Airtable API, compatible with pyairtable"
license = "MIT"
repository = "https://github.com/jmurray/rsairtable"
documentation = "https://docs.rs/rsairtable"

[[bin]]
name = "rsairtable"
path = "src/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Environment variables and configuration
dotenv = "0.15"

# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }

# URL building and manipulation
url = "2.3"

# Date/time handling (for Airtable timestamps)
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
